Resolving z-index bug on health-daily buttons

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -840,6 +840,7 @@ body {
     top: 15px;
     right: 15px;
     margin: 0;
+    z-index: 1;
   }
 }
 
